syntax = "proto3";
 
package message_v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/celtic93/chat-server/pkg/v1/message;message_v1";

service MessageV1 {
  rpc Create(CreateRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  int64  chat_id = 1;
  int64  user_id = 2;
  string text = 3;
}
